# l-system

./: .gitignore  README.md
experiments/locomotion1/: configuration.txt  differences.txt  evolution.txt  history.txt  logs.txt  measures.txt  measures2.txt  morphological_grid_accumulated.txt  morphological_grid_summary.txt
experiments/locomotion1/offspringpop1/: genome0.txt  genome1.txt  genome2.txt  genome3.txt  genome4.txt  genome5.txt  genome6.txt  genome7.txt  genome8.txt  genome9.txt  measures0.txt  measures1.txt  measures2.txt  measures3.txt  measures4.txt  measures5.txt  measures6.txt  measures7.txt  measures8.txt  measures9.txt  robot_0.yaml  robot_1.yaml  robot_2.yaml  robot_3.yaml  robot_4.yaml  robot_5.yaml  robot_6.yaml  robot_7.yaml  robot_8.yaml  robot_9.yaml  tempbrain.dot
experiments/locomotion1/offspringpop10/: genome50.txt  genome51.txt  genome52.txt  measures50.txt  measures52.txt  measures54.txt  robot_50.yaml  robot_51.yaml  robot_53.yaml  tempbrain.dot
experiments/locomotion1/offspringpop2/: genome10.txt  genome11.txt  genome12.txt  genome13.txt  genome14.txt  measures10.txt  measures11.txt  measures12.txt  measures13.txt  measures14.txt  robot_10.yaml  (+5 more)
lsystem/: CMakeLists.txt  configuration.txt  main.cpp
lsystem/include/: Aux.h  DecodedGeneticString.h  Evolution.h  EvolutionIndirect.h  GeneticString.h  Genome.h  Measures.h  Tests.h
lsystem/python/: CMakeLists.txt  EvolutionIndirect_python.cpp
lsystem/src/: Aux.cpp  DecodedGeneticString.cpp  Evolution.cpp  EvolutionIndirect.cpp  GeneticString.cpp  Genome.cpp  LSystem.cpp  Measures.cpp
(+84 files in other folders)
